app/v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-green
  labels:
    app: green
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
    prometheus.io/path: /metrics
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.dev.juliosaraiva.com
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: app-green
                port:
                  number: 80
# tls:
#   - hosts:
#       - test.dev.juliosaraiva.com
#     secretName: "letsencrypt"
